# $Id$ vim: ts=4

Griffith ChangeLog
------------------
(c) 2005-2011  Vasco Nunes, Piotr Ożarowski

2011-06-01  Ivo Nunes
    * fixed crash when you try fetching a movie's information without internet connection

2011-05-23  Michael Jahn
	* updated MyMoviesIt plugin (full cast, screenplay, cameraman, director)
	* [#721036] Problem to add a movie

2011-05-18  Michael Jahn
	* updated CineMovies plugin (thanks to Olivier BOURSIN)
	* small fixes for Allocine and AllRovi plugin
	* added quick search for any field in the main window (thanks to Daniel Fetchinson)

2011-05-12  Michael Jahn
	* added "virtual" resolutions (4:3 Fullscreen, Widescreen, Anamorphic Widescreen)

2011-05-05  Michael Jahn
	* fixed movie plugin AllMovie, it is now AllRovi
	* small fixes for CineMovies and HKMDB

2011-04-27  Filippo Valsorda
    * New Interfilmes plugin by Elencarlos Soares

2011-04-22  Filippo Valsorda
    * New CSFD plugin by Kamil Hanus
    * Minor fixes in IMDB-it and MyMoviesIt plugins
    * Fixed a typo in it.po

2011-03-20  Piotr Ożarowski
	* "spellchekcer" typo fixed (thanks to Olivier BOURSIN)

2011-02-17  Vasco Nunes
	* Added native Cocoa generic dialogs under macosx, using pyobjc.

2011-02-13  Piotr Ożarowski
	* SQLAlchemy 0.7 compatibility changes

2011-02-12  Vasco Nunes
	* Implemented MultiSelection support in MainTreeView
	* Re-implemented macosx menubar integration 

2011-02-10  Michael Jahn
	* [#716176] 0.12.1 No postgres support on Windows

2011-02-07  Ivo Nunes
	* Changed the way Mac OS X creates a new database so that it doesn't open external applications
	* Fixed exporting under Mac OS X

2011-02-06  Ivo Nunes
	* Fixed creating a new database and restoring backups under Mac OS X

2011-02-05  Vasco Nunes
	* [#703576] no automatic refresh after get back a dvd
	* Sync mac menubar when menu checkMenuItems are changed
	* Fixed about dialog on macosx

2011-02-05  Ivo Nunes
    * Fixed and re-enabled Mac OS X UI Cocoa menu integration